--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
     </activity>
 
     <activity android:name=".content.DependOnTopActivity"/>
-
+    <activity android:name=".content.CollapsingToolBarActivity"/>
   </application>
 
 </manifest>
