--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,14 @@
     <activity android:name=".MainActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
-
+        <action android:name="android.intent.action.VIEW"/>
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
 
     <activity android:name=".content.DependOnTopActivity"/>
     <activity android:name=".content.CollapsingToolBarActivity"/>
+    <activity android:name=".content.FloatBtnShowHideActivity"/>
   </application>
 
 </manifest>
